--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/vetcare_db
-spring.datasource.username=postgres
-spring.datasource.password=ana123
+spring.datasource.username=seu_user
+spring.datasource.password=sua_senha
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=VetCareEACH@gmail.com
-spring.mail.password=patricialinda
+spring.mail.username=user
+spring.mail.password=senha
 spring.mail.protocol=smtp
 spring.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.auth=true
