feat: Tela inicial de pacientes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api
 spring.datasource.url=jdbc:postgresql://localhost:5432/vetcare_db
-spring.datasource.username=seu_user
-spring.datasource.password=sua_senha
+spring.datasource.username=postgres
+spring.datasource.password=admin
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.mail.host=smtp.gmail.com
